rulebooks/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eda
  name: eda-ingress-webhook
spec:
  tls:
    - hosts:
        - awx01.veganball.de
      secretName: eda-secret-tls
  rules:
    - host: awx01.veganball.de
      http:
        paths:
          - path: /webhooks/demo
            pathType: ImplementationSpecific
            backend:
              service:
                name: activation-job-1-1-5000
                port:
                  number: 5000
